[gd_scene load_steps=11 format=3 uid="uid://di34kvc0uchpb"]

[ext_resource type="Script" path="res://Map/map_generator.gd" id="1_ht3iq"]
[ext_resource type="Script" path="res://Locations/location.gd" id="2_co2yx"]
[ext_resource type="Resource" uid="uid://sde5dvd0tsdi" path="res://Locations/Dungeon/slime_king_dungeon.tres" id="3_rj6ve"]
[ext_resource type="Resource" uid="uid://bqtapx8v07yhu" path="res://Locations/Resources/fishing.tres" id="4_04i42"]
[ext_resource type="PackedScene" uid="uid://bgu6ancyjl4kb" path="res://Map/map_node.tscn" id="4_aegn2"]
[ext_resource type="Resource" uid="uid://drar7k6n8xn0q" path="res://Locations/Resources/hunting.tres" id="5_d6ubw"]
[ext_resource type="Resource" uid="uid://6yu2tnvetura" path="res://Locations/Resources/foraging.tres" id="6_26ymd"]
[ext_resource type="Resource" uid="uid://t8w2wc3ir3bf" path="res://Locations/Town/town_no_station.tres" id="7_0mwv8"]
[ext_resource type="Resource" uid="uid://bu26e8x4vhnut" path="res://Locations/Bosses/goblin_king.tres" id="7_qphax"]
[ext_resource type="AudioStream" uid="uid://h0sje632f2nd" path="res://DownloadAssets/Inventory SFX Bundle/TurnPage4.mp3" id="10_0h7bd"]

[node name="Map" type="Control" node_paths=PackedStringArray("mapNodeScene", "pathLineTemplateScene") groups=["persist"]]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ht3iq")
mapNodeScene = NodePath("MapNodeTemplate")
pathLineTemplateScene = NodePath("Line2D")
possibleLocations = Array[ExtResource("2_co2yx")]([ExtResource("3_rj6ve"), ExtResource("4_04i42"), ExtResource("5_d6ubw"), ExtResource("6_26ymd"), ExtResource("7_0mwv8")])
possibleBosses = Array[ExtResource("2_co2yx")]([ExtResource("7_qphax")])
bottomLeftMapPosition = Vector2i(50, 600)

[node name="MapNodeTemplate" parent="." instance=ExtResource("4_aegn2")]
visible = false

[node name="MapCamera" type="Camera2D" parent="."]
unique_name_in_owner = true

[node name="Line2D" type="Line2D" parent="."]
visible = false
default_color = Color(0.51578, 0.357592, 0.234679, 1)

[node name="MapContainer" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Boss" parent="." groups=["persist"] instance=ExtResource("4_aegn2")]
unique_name_in_owner = true
scale = Vector2(3, 3)
focus_mode = 2
x_map_pos = -1
y_map_pos = -1
visitState = 0

[node name="MapMovementSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_0h7bd")
pitch_scale = 1.5
bus = &"SFX"

[connection signal="map_node_clicked" from="Boss" to="." method="_on_map_node_clicked"]

[editable path="Boss"]
